# qwen-grug-finetune

./: .env.example  .gitignore  AGENT.md  Makefile  NEXT_STEPS.md  PLAN.md  README.md  STEPS.md  STEPS_RESULT.md  STORY.md  SUMMARY.md  config.yaml  index.html  lora_config.yaml  pyproject.toml  requirements.txt  style_guide.md
.github/workflows/: deploy-visualizer.yml
assets/: index-6nSrNIOX.css  index-CM2VHZWL.js
report/: REPORT.md  gsm8k_finetuned.json  gsm8k_grug_baseline.json  gsm8k_grug_finetuned.json  gsm8k_normal_baseline.json  gsm8k_normal_finetuned.json  metrics.json
report/it-1/: REPORT.md  gsm8k_grug_finetuned.json  gsm8k_normal_baseline.json  metrics.json
report/it-2/: gsm8k_finetuned.json  metrics.json
scripts/: compress_traces.py  config.py  eval.py  format_data.py  generate.py  generate_blog_plots.py  generate_traces.py  generation_utils.py  grug_score.py  plot_results.py  prompt_utils.py  sample_sft_prompts.py  sync_hf.py  train.py  validate_traces.py
scripts/cuda/: eval.py  generate.py  generate_traces.py  generation_utils.py  train.py
visualize/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
visualize/src/: App.tsx  index.css
visualize/src/components/: WelcomeBanner.tsx
visualize/src/components/layout/: StatCards.tsx
visualize/src/components/ui/: CodeBlock.tsx  ThinkingBubble.tsx
visualize/src/hooks/: useWorkspace.ts
visualize/src/lib/: loader.ts
visualize/src/types/: index.ts
visualize/src/views/: AnalyticsView.tsx  EvaluationView.tsx  ExplorerView.tsx  OverviewView.tsx  StyleGuideView.tsx
