[project]
name = "qwen-finetune"
version = "0.1.0"
description = "Fine-tune DeepSeek-R1-Distill-Qwen-1.5B on Apple Silicon using MLX"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm==0.31.3",
    "datasets==5.0.0",
    "openai==2.44.0",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.2",
    "matplotlib==3.11.0",
    "tqdm>=4.68.3",
]
